# rqm-notebooks

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml
assets/diagrams/: README.md
assets/images/: README.md
helpers/: __init__.py  display_utils.py  notebook_style.py  plotting.py
notebooks/: 00_welcome_and_repo_map.ipynb  01_quaternion_intuition.ipynb  02_spinor_to_bloch.ipynb  03_su2_rotations_and_geometry.ipynb  04_rqm_core_as_source_of_truth.ipynb  05_rqm_qiskit_single_qubit_workflows.ipynb  06_simulator_measurements.ipynb  07_state_preparation_and_visual_checks.ipynb  08_gate_composition_as_geometry.ipynb  09_ibm_ready_path.ipynb  10_one_state_three_views.ipynb
tests/: __init__.py  test_notebook_imports.py
