[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-notebooks"
version = "0.1.0"
description = "Interactive notebooks for learning quaternion geometry, Bloch interpretation, SU(2) rotations, and Qiskit-backed workflows in the RQM ecosystem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["quantum", "quaternion", "bloch", "su2", "qiskit", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "numpy>=1.25",
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
    "ipywidgets>=8.0",
    "rqm-core>=0.1.0",
    "rqm-qiskit>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "nbformat>=5.9",
    "nbconvert>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helpers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
